[package]
name = "srs-interpolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = ["asm"] }
ark-poly = "0.4.0"
ark-std = "0.4.0"
rayon = { version = "1.5.0", optional = true }
