[package]
name = "srs-interpolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = ["asm"] }
ark-poly = "0.4.0"
ark-std = "0.4.0"
ark-bn254 = "0.4.0"
rayon = { version = "1.5.0", optional = true }
itertools = { version = "0.10.1", default-features = false, features = [
    "use_alloc",
] }

[features]
default = ["parallel"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
    "dep:rayon",
]
